--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,4 @@ data/tools/ngsbits_settings.ini
 Clair3-v1.0.10
 /test/data_chrx/dragen
 /test/data_longread/methylartist/*.png
+/test/data_longread/23014LRa023_01_epigen.tsv
